Genesis seems to be working, needs more testing though

--- a/denuded epub/epubmodified/GEN.xhtml
+++ b/denuded epub/epubmodified/GEN.xhtml
@@ -1594,7 +1594,7 @@
 <span class="verse" id="GN41_42">42&#160;</span> And Pharaoh took off his ring from his hand, and put it upon Joseph’s hand, and arrayed him in vestures of fine linen, and put a gold chain about his neck;
 <span class="verse" id="GN41_43">43&#160;</span> And he made him to ride in the second chariot which he had; and they cried before him, Bow the knee: and he made him <span class='add'>ruler</span> over all the land of Egypt.
 <span class="verse" id="GN41_44">44&#160;</span> And Pharaoh said unto Joseph, I <span class='add'>am</span> Pharaoh, and without thee shall no man lift up his hand or foot in all the land of Egypt. 
-<span class="verse" id="GN41_45">45&#160;</span> And Pharaoh called Joseph's name Zaphnathpaaneah; and he gave him to wife Asenath the daughter of Potipherah priest of On. And Joseph went out over <span class='add'>all</span> the land of Egypt.</div>
+<span class="verse" id="GN41_45">45&#160;</span> And Pharaoh called Joseph’s name Zaphnathpaaneah; and he gave him to wife Asenath the daughter of Potipherah priest of On. And Joseph went out over <span class='add'>all</span> the land of Egypt.</div>
 <div class='p'>
 <span class="verse" id="GN41_46">46&#160;</span>¶ And Joseph <span class='add'>was</span> thirty years old when he stood before Pharaoh king of Egypt. And Joseph went out from the presence of Pharaoh, and went throughout all the land of Egypt. 
 <span class="verse" id="GN41_47">47&#160;</span> And in the seven plenteous years the earth brought forth by handfuls. 
@@ -1636,7 +1636,7 @@
 <div class='p'>
 <span class="verse" id="GN42_21">21&#160;</span>¶ And they said one to another, We <span class='add'>are</span> verily guilty concerning our brother, in that we saw the anguish of his soul, when he besought us, and we would not hear; therefore is this distress come upon us. 
 <span class="verse" id="GN42_22">22&#160;</span> And Reuben answered them, saying, Spake I not unto you, saying, Do not sin against the child; and ye would not hear? therefore, behold, also his blood is required. 
-<span class="verse" id="GN42_23">23&#160;</span> And they knew not that Joseph understood  <span class='add'>them;</span> for he spake unto them by an interpreter.
+<span class="verse" id="GN42_23">23&#160;</span> And they knew not that Joseph understood <span class='add'>them;</span> for he spake unto them by an interpreter.
 <span class="verse" id="GN42_24">24&#160;</span> And he turned himself about from them, and wept; and returned to them again, and communed with them, and took from them Simeon, and bound him before their eyes. </div>
 <div class='p'>
 <span class="verse" id="GN42_25">25&#160;</span>¶ Then Joseph commanded to fill their sacks with corn, and to restore every man’s money into his sack, and to give them provision for the way: and thus did he unto them. 
