there's a bug in 2348_ref

--- a/denuded epub/epubmodified/JOS.xhtml
+++ b/denuded epub/epubmodified/JOS.xhtml
@@ -311,7 +311,7 @@
 <span class="verse" id="JS9_27">27&#160;</span> And Joshua made them that day hewers of wood and drawers of water for the congregation, and for the altar of the <span class='nd'>LORD</span>, even unto this day, in the place which he should choose.</div>
 <div class='chapterlabel' id='JS10_0'>10</div>
 <div class='p'>
-<span class="verse" id="JS10_1">1&#160;</span> Now it came to pass, when Adoni-zedek king of Jerusalem had heard how Joshua had taken Ai, and had utterly destroyed it; as he had done to Jericho and her king, so he had done to Ai and her king; and how the inhabitants of Gibeon had made peace with Israel, and were among them; 
+<span class="verse" id="JS10_1">1&#160;</span> Now it came to pass, when Adonizedek king of Jerusalem had heard how Joshua had taken Ai, and had utterly destroyed it; as he had done to Jericho and her king, so he had done to Ai and her king; and how the inhabitants of Gibeon had made peace with Israel, and were among them;
 <span class="verse" id="JS10_2">2&#160;</span> That they feared greatly, because Gibeon <span class='add'>was</span> a great city, as one of the royal cities, and because it <span class='add'>was</span> greater than Ai, and all the men thereof <span class='add'>were</span> mighty.
 <span class="verse" id="JS10_3">3&#160;</span> Wherefore Adoni-zedek king of Jerusalem sent unto Hoham king of Hebron, and unto Piram king of Jarmuth, and unto Japhia king of Lachish, and unto Debir king of Eglon, saying, 
 <span class="verse" id="JS10_4">4&#160;</span> Come up unto me, and help me, that we may smite Gibeon: for it hath made peace with Joshua and with the children of Israel. 
