corrected the hyphenation of some names; so far parsing is good up to 2783

--- a/denuded epub/epubmodified/GEN.xhtml
+++ b/denuded epub/epubmodified/GEN.xhtml
@@ -1594,7 +1594,7 @@
 <span class="verse" id="GN41_42">42&#160;</span> And Pharaoh took off his ring from his hand, and put it upon Joseph’s hand, and arrayed him in vestures of fine linen, and put a gold chain about his neck;
 <span class="verse" id="GN41_43">43&#160;</span> And he made him to ride in the second chariot which he had; and they cried before him, Bow the knee: and he made him <span class='add'>ruler</span> over all the land of Egypt.
 <span class="verse" id="GN41_44">44&#160;</span> And Pharaoh said unto Joseph, I <span class='add'>am</span> Pharaoh, and without thee shall no man lift up his hand or foot in all the land of Egypt. 
-<span class="verse" id="GN41_45">45&#160;</span> And Pharaoh called Joseph’s name Zaphnathpaaneah; and he gave him to wife Asenath the daughter of Potipherah priest of On. And Joseph went out over <span class='add'>all</span> the land of Egypt.</div>
+<span class="verse" id="GN41_45">45&#160;</span> And Pharaoh called Joseph’s name Zaphnath-Paaneah; and he gave him to wife Asenath the daughter of Potipherah priest of On. And Joseph went out over <span class='add'>all</span> the land of Egypt.</div>
 <div class='p'>
 <span class="verse" id="GN41_46">46&#160;</span>¶ And Joseph <span class='add'>was</span> thirty years old when he stood before Pharaoh king of Egypt. And Joseph went out from the presence of Pharaoh, and went throughout all the land of Egypt. 
 <span class="verse" id="GN41_47">47&#160;</span> And in the seven plenteous years the earth brought forth by handfuls. 
