--- a/denuded epub/epubmodified/RUT.xhtml
+++ b/denuded epub/epubmodified/RUT.xhtml
@@ -22,7 +22,7 @@
 <div class='p'>
 
 <span class="verse" id="RT1_1">1&#160;</span> Now it came to pass in the days when the judges ruled, that there was a famine in the land. And a certain man of Beth-lehem-judah went to sojourn in the country of Moab, he, and his wife, and his two sons.
-<span class="verse" id="RT1_2">2&#160;</span> And the name of the man <span class='add'>was</span> Elimelech, and the name of his wife Naomi, and the name of his two sons Mahlon and Chilion, Ephrathites of Beth-lehem-judah. And they came into the country of Moab, and continued there.
+<span class="verse" id="RT1_2">2&#160;</span> And the name of the man <span class='add'>was</span> Elimelech, and the name of his wife Naomi, and the name of his two sons Mahlon and Chilion, Ephrathites of Bethlehem Judah. And they came into the country of Moab, and continued there.
 <span class="verse" id="RT1_3">3&#160;</span> And Elimelech Naomi’s husband died; and she was left, and her two sons. 
 <span class="verse" id="RT1_4">4&#160;</span> And they took them wives of the women of Moab; the name of the one <span class='add'>was</span> Orpah, and the name of the other Ruth: and they dwelled there about ten years. 
 <span class="verse" id="RT1_5">5&#160;</span> And Mahlon and Chilion died also both of them; and the woman was left of her two sons and her husband. </div>
