do everything up to and including ref_3975

--- a/denuded epub/epubmodified/1CH.xhtml
+++ b/denuded epub/epubmodified/1CH.xhtml
@@ -203,7 +203,7 @@
 <span class="verse" id="R13_20">20&#160;</span> And Hashubah, and Ohel, and Berechiah, and Hasadiah, Jushab-hesed, five. 
 <span class="verse" id="R13_21">21&#160;</span> And the sons of Hananiah; Pelatiah, and Jesaiah: the sons of Rephaiah, the sons of Arnan, the sons of Obadiah, the sons of Shechaniah. 
 <span class="verse" id="R13_22">22&#160;</span> And the sons of Shechaniah; Shemaiah: and the sons of Shemaiah; Hattush, and Igeal, and Bariah, and Neariah, and Shaphat, six. 
-<span class="verse" id="R13_23">23&#160;</span> And the sons of Neariah; Elioenai, and Hezekiah, and Azrikam, three.
+<span class="verse" id="R13_23">23&#160;</span> And the sons of Neariah: Elioenai, and Hezekiah, and Azrikam, three.
 <span class="verse" id="R13_24">24&#160;</span> And the sons of Elioenai <span class='add'>were</span>, Hodaiah, and Eliashib, and Pelaiah, and Akkub, and Johanan, and Dalaiah, and Anani, seven.  </div>
 <div class='chapterlabel' id='R14_0'>4</div>
 <div class='p'>
