--- a/denuded epub/epubmodified/2KI.xhtml
+++ b/denuded epub/epubmodified/2KI.xhtml
@@ -911,7 +911,7 @@
 <span class="verse" id="K225_6">6&#160;</span> So they took the king, and brought him up to the king of Babylon to Riblah; and they gave judgment upon him.
 <span class="verse" id="K225_7">7&#160;</span> And they slew the sons of Zedekiah before his eyes, and put out the eyes of Zedekiah, and bound him with fetters of brass, and carried him to Babylon.</div>
 <div class='p'>
-<span class="verse" id="K225_8">8&#160;</span>¶ And in the fifth month, on the seventh <span class='add'>day</span> of the month, which <span class='add'>is</span> the nineteenth year of king Nebuchadnezzar king of Babylon, came Nebuzar-adan, captain of the guard, a servant of the king of Babylon, unto Jerusalem:
+<span class="verse" id="K225_8">8&#160;</span>¶ And in the fifth month, on the seventh <span class='add'>day</span> of the month, which <span class='add'>is</span> the nineteenth year of king Nebuchadnezzar king of Babylon, came Nebuzaradan, captain of the guard, a servant of the king of Babylon, unto Jerusalem:
 <span class="verse" id="K225_9">9&#160;</span> And he burnt the house of the <span class='nd'>LORD</span>, and the king’s house, and all the houses of Jerusalem, and every great <span class='add'>man’s</span> house burnt he with fire. 
 <span class="verse" id="K225_10">10&#160;</span> And all the army of the Chaldees, that <span class='add'>were with</span> the captain of the guard, brake down the walls of Jerusalem round about. 
 <span class="verse" id="K225_11">11&#160;</span> Now the rest of the people <span class='add'>that were</span> left in the city, and the fugitives that fell away to the king of Babylon, with the remnant of the multitude, did Nebuzar-adan the captain of the guard carry away.
