write the apocrypha getter and modify 3 holy children header

--- a/denuded epub/epubmodified/S3Y.xhtml
+++ b/denuded epub/epubmodified/S3Y.xhtml
@@ -4,15 +4,16 @@
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="epub.css" type="text/css" />
 <meta name="viewport" content="user-scalable=yes, initial-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
-<title>King James Version + Apocrypha Azariah 1</title>
+<title>King James Version + Apocrypha The Song of the Three Holy Children 1</title>
 </head>
 <body dir='ltr'>
 <ul class='tnav'>
-<li><a href='index.xhtml'>Azariah</a></li>
+<li><a href='index.xhtml'>The Song of the Three Holy Children</a></li>
 </ul>
 <div class='main' id='PA0_0'>
 
-<div class='mt'>The Prayer of Azariah  </div>
+<div class='mt'>The Song of the Three Holy Children</div>
+<div class='is'>which followeth in the third Chapter of Daniel after this place,—<span class='add'>fell down bound into the midst of the burning fiery furnace</span>—verse 23. That which followeth is not in the Chaldee, to wit, <span class='add'>And they walked</span>—unto these words, <span class='add'>Then Nebuchadnezzar</span>—verse 24</div>
 <div class='chapterlabel' id='PA1_0'>1</div>
 <div class='p'>
 
