--- a/denuded epub/epubmodified/index.xhtml
+++ b/denuded epub/epubmodified/index.xhtml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
  <meta charset="utf-8" />
@@ -90,6 +90,10 @@
    </li>
    <li><a class='oo' href='MAL.xhtml'>Malachi</a>
    </li>
+   <li><a class='aa' href='1ES.xhtml'>1 Esdras</a>
+   </li>
+   <li><a class='aa' href='2ES.xhtml'>2 Esdras</a>
+   </li>
    <li><a class='aa' href='TOB.xhtml'>Tobit</a>
    </li>
    <li><a class='aa' href='JDT.xhtml'>Judith</a>
@@ -102,21 +106,17 @@
    </li>
    <li><a class='aa' href='BAR.xhtml'>Baruch</a>
    </li>
-   <li><a class='aa' href='S3Y.xhtml'>3 Holy Children's Song</a>
+   <li><a class='aa' href='S3Y.xhtml'>The Song of the Three Holy Children</a>
    </li>
    <li><a class='aa' href='SUS.xhtml'>Susanna</a>
    </li>
    <li><a class='aa' href='BEL.xhtml'>Bel and the Dragon</a>
    </li>
+   <li><a class='aa' href='MAN.xhtml'>Prayer of Manasses</a>
+   </li>
    <li><a class='aa' href='1MA.xhtml'>1 Maccabees</a>
    </li>
    <li><a class='aa' href='2MA.xhtml'>2 Maccabees</a>
-   </li>
-   <li><a class='aa' href='1ES.xhtml'>1 Esdras</a>
-   </li>
-   <li><a class='aa' href='MAN.xhtml'>Prayer of Manasses</a>
-   </li>
-   <li><a class='aa' href='2ES.xhtml'>2 Esdras</a>
    </li>
    <li><a class='nn' href='MAT.xhtml'>Matthew</a>
    </li>
