Fixed the bug from the last two commits, but there's a problem in the getModifiedVerse function: it puts the footnotes in the wrong order if they happen to be right next to one another (e.g. footnotes of the index 8 and 9 in the prayer of manasseh)

--- a/denuded epub/OEBPS/MAN.xhtml
+++ b/denuded epub/OEBPS/MAN.xhtml
@@ -28,7 +28,7 @@
 <span class="verse" id="PN1_10">10&#160;</span>I am bowed down with many iron bands, that I cannot lift up mine head, neither have any release: for I have provoked thy wrath, and done evil before thee: I did not thy will, neither kept I thy commandments: I have set up abominations, and have multiplied offences.
 <span class="verse" id="PN1_11">11&#160;</span>Now therefore I bow the knee of mine heart, beseeching thee of grace.
 <span class="verse" id="PN1_12">12&#160;</span>I have sinned, O Lord, I have sinned, and I acknowledge mine iniquities:
-<span class="verse" id="PN1_13">13&#160;</span>wherefore, I humbly beseech thee, forgive me, O Lord, forgive me, and destroy me not with mine iniquites. Be not angry with me for ever, by reserving evil for me; neither condemn me to the lower parts of the earth. For thou art the God, even the God of them that repent;
+<span class="verse" id="PN1_13">13&#160;</span>wherefore, I humbly beseech thee, forgive me, O Lord, forgive me, and destroy me not with mine iniquities. Be not angry with me for ever, by reserving evil for me; neither condemn me to the lower parts of the earth. For thou art the God, even the God of them that repent;
 <span class="verse" id="PN1_14">14&#160;</span>and in me thou wilt shew all thy goodness: for thou wilt save me, that am unworthy, according to thy great mercy.
 <span class="verse" id="PN1_15">15&#160;</span>Therefore I will praise thee for ever all the days of my life: for all the powers of the heavens do praise thee, and thine is the glory for ever and ever. Amen. </div><div class="footnote">
 <hr />
