--- a/denuded epub/OEBPS/SUS.xhtml
+++ b/denuded epub/OEBPS/SUS.xhtml
@@ -13,7 +13,7 @@
 <div class='main' id='SN0_0'>
 
 <div class='mt'>The History of Susanna [in Daniel] </div>
-<div class='is'>Set apart from the beginning of Daniel, because it is not in the Hebrew, as neither the Narration of Bel and the Dragon.  </div>
+<div class='is'>Set apart from the beginning of Daniel, because it is not in Hebrew, as neither the Narration of Bel and the Dragon.  </div>
 <div class='psalmlabel' id='SN1_0'> 1</div>
 <div class='p'>
 
