fix a few more sirach discrepancies

--- a/denuded epub/OEBPS/SIR.xhtml
+++ b/denuded epub/OEBPS/SIR.xhtml
@@ -1067,7 +1067,7 @@
 <span class="verse" id="SR18_33">33&#160;</span>Be not made a beggar by banqueting upon borrowing, when thou hast nothing in thy purse: for thou shalt lie in wait for thine own life, and be talked on.  </div>
 <div class='psalmlabel' id='SR19_0'> 19</div>
 <div class='p'>
-<span class="verse" id="SR19_1">1&#160;</span>A labouring man that A is given to drunkenness shall not be rich: and he that contemneth small things shall fall by little and little. </div>
+<span class="verse" id="SR19_1">1&#160;</span>A labouring man that is given to drunkenness shall not be rich: and he that contemneth small things shall fall by little and little. </div>
 <div class='p'>
 <span class="verse" id="SR19_2">2&#160;</span>Wine and women will make men of understanding to fall away: and he that cleaveth to harlots will become impudent. </div>
 <div class='p'>
