do sirach discrepancies up to but not including chapter 38

--- a/denuded epub/OEBPS/SIR.xhtml
+++ b/denuded epub/OEBPS/SIR.xhtml
@@ -2005,7 +2005,7 @@
 <div class='p'>
 <span class="verse" id="SR35_6">6&#160;</span>The offering of the righteous maketh the altar fat, and the sweet savour thereof is before the most High. </div>
 <div class='p'>
-<span class="verse" id="SR35_7">7&#160;</span>The sacrifice of a just man is acceptable. and the memorial thereof shall never be forgotten. </div>
+<span class="verse" id="SR35_7">7&#160;</span>The sacrifice of a just man is acceptable, and the memorial thereof shall never be forgotten. </div>
 <div class='p'>
 <span class="verse" id="SR35_8">8&#160;</span>Give the Lord his honour with a good eye, and diminish not the firstfruits of thine hands. </div>
 <div class='p'>
