do sirach discrepancies up to but not including 46

--- a/denuded epub/OEBPS/SIR.xhtml
+++ b/denuded epub/OEBPS/SIR.xhtml
@@ -2570,7 +2570,7 @@
 <div class='p'>
 <span class="verse" id="SR45_3">3&#160;</span>By his words he caused the wonders to cease, and he made him glorious in the sight of kings, and gave him a commandment for his people, and shewed him part of his glory. </div>
 <div class='p'>
-<span class="verse" id="SR45_4">4&#160;</span>He sanctified him in his faithfuless and meekness, and chose him out of all men. </div>
+<span class="verse" id="SR45_4">4&#160;</span>He sanctified him in his faithfulness and meekness, and chose him out of all men. </div>
 <div class='p'>
 <span class="verse" id="SR45_5">5&#160;</span>He made him to hear his voice, and brought him into the dark cloud, and gave him commandments before his face, even the law of life and knowledge, that he might teach Jacob his covenants, and Israel his judgments. </div>
 <div class='p'>
