do deuteronomy; also fix all spans in the html notes to match the convention of the EPUB

--- a/final product/OEBPS/EXO.xhtml
+++ b/final product/OEBPS/EXO.xhtml
@@ -1869,11 +1869,11 @@
 <aside epub:type='footnote' id="FN147"><p class="f"><a class="notebackref" href="#EX17_14"><span class="notemark">*</span> 17.14</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU24_20'>24. 20</a>. 1 Sam. <a href='1SA.xhtml#S115_3'>15. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN148"><p class="f"><a class="notebackref" href="#EX17_15"><span class="notemark">∥</span> 17.15</a>
- <span class="ft">That is, <span class="ital">The <span class="csc">Lord</span> my banner.</span></span></p></aside>
+ <span class="ft">That is, <span class="add">The <span class="nd">Lord</span> my banner.</span></span></p></aside>
 <aside epub:type='footnote' id="FN149"><p class="f"><a class="notebackref" href="#EX17_16"><span class="notemark">∥</span> 17.16</a>
- <span class="ft">Or, Because the hand of Amalek is <span class="ital">against the throne of the <span class="csc">Lord,</span></span> therefore, &amp;c.</span></p></aside>
+ <span class="ft">Or, Because the hand of Amalek is <span class="add">against the throne of the <span class="nd">Lord,</span></span> therefore, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN150"><p class="f"><a class="notebackref" href="#EX17_16"><span class="notemark">†</span> 17.16</a>
- <span class="ft">Heb. <span class="ital">the hand upon the throne of the <span class="csc">Lord.</span></span></span></p></aside>
+ <span class="ft">Heb. <span class="add">the hand upon the throne of the <span class="nd">Lord.</span></span></span></p></aside>
 <aside epub:type='footnote' id="FN151"><p class="f"><a class="notebackref" href="#EX18_1"><span class="notemark">*</span> 18.1</a>
  <span class="ft">ch. <a href='EXO.xhtml#EX2_16'>2. 16</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN152"><p class="f"><a class="notebackref" href="#EX18_3"><span class="notemark">*</span> 18.3</a>
@@ -2221,7 +2221,7 @@
 <aside epub:type='footnote' id="FN323"><p class="f"><a class="notebackref" href="#EX32_11"><span class="notemark">*</span> 32.11</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS106_23'>106. 23</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN324"><p class="f"><a class="notebackref" href="#EX32_11"><span class="notemark">†</span> 32.11</a>
- <span class="ft">Heb. <span class="ital">the face of the <span class="csc">Lord.</span></span></span></p></aside>
+ <span class="ft">Heb. <span class="add">the face of the <span class="nd">Lord.</span></span></span></p></aside>
 <aside epub:type='footnote' id="FN325"><p class="f"><a class="notebackref" href="#EX32_12"><span class="notemark">*</span> 32.12</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU14_13'>14. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN326"><p class="f"><a class="notebackref" href="#EX32_13"><span class="notemark">*</span> 32.13</a>
@@ -2235,7 +2235,7 @@
 <aside epub:type='footnote' id="FN330"><p class="f"><a class="notebackref" href="#EX32_25"><span class="notemark">†</span> 32.25</a>
  <span class="ft">Heb. those that rose up against them.</span></p></aside>
 <aside epub:type='footnote' id="FN331"><p class="f"><a class="notebackref" href="#EX32_29"><span class="notemark">∥</span> 32.29</a>
- <span class="ft">Or, <span class="ital">And Moses said, Consecrate yourselves to day to the <span class="csc">Lord,</span> because, every man</span> hath been against his son, and against his brother, &amp;c.</span></p></aside>
+ <span class="ft">Or, <span class="add">And Moses said, Consecrate yourselves to day to the <span class="nd">Lord,</span> because, every man</span> hath been against his son, and against his brother, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN332"><p class="f"><a class="notebackref" href="#EX32_29"><span class="notemark">†</span> 32.29</a>
  <span class="ft">Heb. Fill your hands.</span></p></aside>
 <aside epub:type='footnote' id="FN333"><p class="f"><a class="notebackref" href="#EX33_1"><span class="notemark">*</span> 33.1</a>
