--- a/final product/OEBPS/GEN.xhtml
+++ b/final product/OEBPS/GEN.xhtml
@@ -2103,7 +2103,7 @@
 <aside epub:type='footnote' id="FN72"><p class="f"><a class="notebackref" href="#GN4_26"><span class="notemark">†</span> 4.26</a>
  <span class="ft">Heb. Enosh</span></p></aside>
 <aside epub:type='footnote' id="FN73"><p class="f"><a class="notebackref" href="#GN4_26"><span class="notemark">∥</span> 4.26</a>
- <span class="ft">Or, to call themselves by the name of the <span class="csc">Lord</span></span></p></aside>
+ <span class="ft">Or, to call themselves by the name of the <span class="nd">Lord</span></span></p></aside>
 <aside epub:type='footnote' id="FN74"><p class="f"><a class="notebackref" href="#GN5_1"><span class="notemark">*</span> 5.1</a>
  <span class="ft">1 Chr. <a href='1CH.xhtml#R11_1'>1. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN75"><p class="f"><a class="notebackref" href="#GN5_2"><span class="notemark">*</span> 5.2</a>
@@ -2401,7 +2401,7 @@
 <aside epub:type='footnote' id="FN221"><p class="f"><a class="notebackref" href="#GN22_9"><span class="notemark">*</span> 22.9</a>
  <span class="ft">Jam. <a href='JAS.xhtml#JM2_21'>2. 21</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN222"><p class="f"><a class="notebackref" href="#GN22_14"><span class="notemark">∥</span> 22.14</a>
- <span class="ft">That is, <span class="ital">The <span class="csc">Lord</span> will see,</span> or, provide.</span></p></aside>
+ <span class="ft">That is, <span class="add">The <span class="nd">Lord</span> will see,</span> or, provide.</span></p></aside>
 <aside epub:type='footnote' id="FN223"><p class="f"><a class="notebackref" href="#GN22_16"><span class="notemark">*</span> 22.16</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS105_9'>105. 9</a>. Ecclus. <a href='SIR.xhtml#SR44_21'>44. 21</a> Luke <a href='LUK.xhtml#LK1_73'>1. 73</a> Heb. <a href='HEB.xhtml#HB6_13'>6. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN224"><p class="f"><a class="notebackref" href="#GN22_17"><span class="notemark">†</span> 22.17</a>
@@ -2751,7 +2751,7 @@
 <aside epub:type='footnote' id="FN396"><p class="f"><a class="notebackref" href="#GN38_7"><span class="notemark">*</span> 38.7</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU26_19'>26. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN397"><p class="f"><a class="notebackref" href="#GN38_10"><span class="notemark">†</span> 38.10</a>
- <span class="ft">Heb. <span class="ital">was evil in the eyes of the <span class="csc">Lord.</span></span></span></p></aside>
+ <span class="ft">Heb. <span class="add">was evil in the eyes of the <span class="nd">Lord.</span></span></span></p></aside>
 <aside epub:type='footnote' id="FN398"><p class="f"><a class="notebackref" href="#GN38_12"><span class="notemark">†</span> 38.12</a>
  <span class="ft">Heb. the days were multiplied.</span></p></aside>
 <aside epub:type='footnote' id="FN399"><p class="f"><a class="notebackref" href="#GN38_14"><span class="notemark">†</span> 38.14</a>
