--- a/final product/OEBPS/LEV.xhtml
+++ b/final product/OEBPS/LEV.xhtml
@@ -1407,7 +1407,7 @@
 <aside epub:type='footnote' id="FN163"><p class="f"><a class="notebackref" href="#LV19_20"><span class="notemark">†</span> 19.20</a>
  <span class="ft">Heb. there shall be a scourging.</span></p></aside>
 <aside epub:type='footnote' id="FN164"><p class="f"><a class="notebackref" href="#LV19_24"><span class="notemark">†</span> 19.24</a>
- <span class="ft">Heb. <span class="ital">holiness of praises to the <span class="csc">Lord</span></span></span></p></aside>
+ <span class="ft">Heb. <span class="add">holiness of praises to the <span class="nd">Lord</span></span></span></p></aside>
 <aside epub:type='footnote' id="FN165"><p class="f"><a class="notebackref" href="#LV19_27"><span class="notemark">*</span> 19.27</a>
  <span class="ft">ch. <a href='LEV.xhtml#LV21_5'>21. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN166"><p class="f"><a class="notebackref" href="#LV19_28"><span class="notemark">*</span> 19.28</a>
@@ -1545,7 +1545,7 @@
 <aside epub:type='footnote' id="FN232"><p class="f"><a class="notebackref" href="#LV24_12"><span class="notemark">*</span> 24.12</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU15_34'>15. 34</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN233"><p class="f"><a class="notebackref" href="#LV24_12"><span class="notemark">†</span> 24.12</a>
- <span class="ft">Heb. <span class="ital">to expound unto them according to the mouth of the <span class="csc">Lord</span></span></span></p></aside>
+ <span class="ft">Heb. <span class="add">to expound unto them according to the mouth of the <span class="nd">Lord</span></span></span></p></aside>
 <aside epub:type='footnote' id="FN234"><p class="f"><a class="notebackref" href="#LV24_14"><span class="notemark">*</span> 24.14</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT13_9'>13 9</a> &amp;c <a href='DEU.xhtml#DT17_7'>17. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN235"><p class="f"><a class="notebackref" href="#LV24_17"><span class="notemark">*</span> 24.17</a>
