start 2 Esdras discrepancies, getting through chapter 4

--- a/denuded epub/OEBPS/2ES.xhtml
+++ b/denuded epub/OEBPS/2ES.xhtml
@@ -149,7 +149,7 @@
 <div class='p'>
 <span class="verse" id="E22_17">17&#160;</span>Fear not, thou mother of the children: for I have chosen thee, saith the Lord. </div>
 <div class='p'>
-<span class="verse" id="E22_18">18&#160;</span>For thy help will I send my servants Esay and Jeremy, after whose counsel I have sanctified and prepared for thee twelve trees laden with divers fruits, </div>
+<span class="verse" id="E22_18">18&#160;</span>For thy help will I send my servants Esau and Jeremy, after whose counsel I have sanctified and prepared for thee twelve trees laden with divers fruits, </div>
 <div class='p'>
 <span class="verse" id="E22_19">19&#160;</span>And as many fountains flowing with milk and honey, and seven mighty mountains, whereupon there grow roses and lilies, whereby I will fill thy children with joy. </div>
 <div class='p'>
