do 2 esdras discrepancies up to and including chapter 10; also fix a bug in the corrections parser that would result if the preceding text did not have any letters in it

--- a/denuded epub/OEBPS/1ES.xhtml
+++ b/denuded epub/OEBPS/1ES.xhtml
@@ -916,7 +916,7 @@
 <div class='p'>
 <span class="verse" id="E19_48">48&#160;</span>Also Jesus, Anus, Sarabias, Adinus, Jacubus, Sabateas, Auteas, Maianeas, and Calitas, Asrias, and Joazabdus, and Ananias, Biatas, the Levites, taught the law of the Lord, making them withal to understand it. </div>
 <div class='p'>
-<span class="verse" id="E19_49">49&#160;</span>Then spake Attharates unto Esdras the chief priest. and reader, and to the Levites that taught the multitude, even to all, saying, </div>
+<span class="verse" id="E19_49">49&#160;</span>Then spake Attharates unto Esdras the chief priest, and reader, and to the Levites that taught the multitude, even to all, saying, </div>
 <div class='p'>
 <span class="verse" id="E19_50">50&#160;</span>This day is holy unto the Lord; (for they all wept when they heard the law:) </div>
 <div class='p'>
