do tobit discrepancies

--- a/denuded epub/OEBPS/TOB.xhtml
+++ b/denuded epub/OEBPS/TOB.xhtml
@@ -124,7 +124,7 @@
 <div class='p'>
 <span class="verse" id="TB3_9">9&#160;</span>Wherefore dost thou beat us for them? if they be dead, go thy ways after them, let us never see of thee either son or daughter. </div>
 <div class='p'>
-<span class="verse" id="TB3_10">10&#160;</span>Whe she heard these things, she was very sorrowful, so that she thought to have strangled herself; and she said, I am the only daughter of my father, and if I do this, it shall be a reproach unto him, and I shall bring his old age with sorrow unto the grave. </div>
+<span class="verse" id="TB3_10">10&#160;</span>When she heard these things, she was very sorrowful, so that she thought to have strangled herself; and she said, I am the only daughter of my father, and if I do this, it shall be a reproach unto him, and I shall bring his old age with sorrow unto the grave. </div>
 <div class='p'>
 <span class="verse" id="TB3_11">11&#160;</span>Then she prayed toward the window, and said, Blessed art thou, O Lord my God, and thine holy and glorious name is blessed and honourable for ever: let all thy works praise thee for ever. </div>
 <div class='p'>
