--- a/denuded epub/OEBPS/JDT.xhtml
+++ b/denuded epub/OEBPS/JDT.xhtml
@@ -572,7 +572,7 @@
 <div class='p'>
 <span class="verse" id="JT13_1">1&#160;</span>Now when the evening was come, his servants made haste to depart, and Bagoas shut his tent without, and dismissed the waiters from the presence of his lord; and they went to their beds: for they were all weary, because the feast had been long. </div>
 <div class='p'>
-<span class="verse" id="JT13_2">2&#160;</span>And Judith was left alone in the tent, and Holofernes lying alone upon his bed: for he was filled with wine. </div>
+<span class="verse" id="JT13_2">2&#160;</span>And Judith was left alone in the tent, and Holofernes lying along upon his bed: for he was filled with wine. </div>
 <div class='p'>
 <span class="verse" id="JT13_3">3&#160;</span>Now Judith had commanded her maid to stand without her bedchamber, and to wait for her. coming forth, as she did daily: for she said she would go forth to her prayers, and she spake to Bagoas according to the same purpose. </div>
 <div class='p'>
