do 1 maccabees notes up to but not including chapter 10

--- a/denuded epub/OEBPS/1MA.xhtml
+++ b/denuded epub/OEBPS/1MA.xhtml
@@ -1076,7 +1076,7 @@
 <div class='p'>
 <span class="verse" id="M19_49">49&#160;</span>So there were slain of Bacchides’ side that day about a thousand men. </div>
 <div class='p'>
-<span class="verse" id="M19_50">50&#160;</span>Afterward returned Bacchides to Jerusalem and repaired the strong cites in Judea; the fort in Jericho, and Emmaus, and Bethhoron, and Beth-el, and Thamnatha, Pharathoni, and Taphon, these did he strengthen with high walls, with gates and with bars. </div>
+<span class="verse" id="M19_50">50&#160;</span>Afterward returned Bacchides to Jerusalem and repaired the strong cites in Judea; the fort in Jericho, and Emmaus, and Bethhoron, and Bethel, and Thamnatha, Pharathoni, and Taphon, these did he strengthen with high walls, with gates and with bars. </div>
 <div class='p'>
 <span class="verse" id="M19_51">51&#160;</span>And in them he set a garrison, that they might work malice upon Israel. </div>
 <div class='p'>
