--- a/denuded epub/OEBPS/2MA.xhtml
+++ b/denuded epub/OEBPS/2MA.xhtml
@@ -765,7 +765,7 @@
 <span class="verse" id="M210_38">38&#160;</span>When this was done, they praised the Lord with psalms and thanksgiving, who had done so great things for Israel, and given them the victory.  </div>
 <div class='psalmlabel' id='M211_0'> 11</div>
 <div class='p'>
-<span class="verse" id="M211_1">1&#160;</span>Not long after the, Lysias the king’s protector and cousin, who also managed the affairs, took sore displeasure for the things that were done. </div>
+<span class="verse" id="M211_1">1&#160;</span>Not long after this, Lysias the king’s protector and cousin, who also managed the affairs, took sore displeasure for the things that were done. </div>
 <div class='p'>
 <span class="verse" id="M211_2">2&#160;</span>And when he had gathered about fourscore thousand with all the horsemen, he came against the Jews, thinking to make the city an habitation of the Gentiles, </div>
 <div class='p'>
