do Judith misalignments (gawk -f corrections.awk footnotes.txt)

--- a/denuded epub/OEBPS/JDT.xhtml
+++ b/denuded epub/OEBPS/JDT.xhtml
@@ -79,7 +79,7 @@
 <div class='p'>
 <span class="verse" id="JT2_6">6&#160;</span>And thou shalt go against all the west country, because they disobeyed my commandment. </div>
 <div class='p'>
-<span class="verse" id="JT2_7">7&#160;</span>And thou shalt declare unto that they prepare for me earth and water: for I will go forth in my wrath against them and will cover the whole face of the earth with the feet of mine army, and I will give them for a spoil unto them: </div>
+<span class="verse" id="JT2_7">7&#160;</span>And thou shalt declare unto them, that they prepare for me earth and water: for I will go forth in my wrath against them and will cover the whole face of the earth with the feet of mine army, and I will give them for a spoil unto them: </div>
 <div class='p'>
 <span class="verse" id="JT2_8">8&#160;</span>So that their slain shall fill their valleys and brooks and the river shall be filled with their dead, till it overflow: </div>
 <div class='p'>
@@ -241,7 +241,7 @@
 <div class='p'>
 <span class="verse" id="JT6_8">8&#160;</span>And thou shalt not perish, till thou be destroyed with them. </div>
 <div class='p'>
-<span class="verse" id="JT6_9">9&#160;</span>And if thou persuade thyself in thy mind that they shall be taken, let not thy countenance fall: I have spoken it, and none of my words shall be in vain. </div>
+<span class="verse" id="JT6_9">9&#160;</span>And if thou persuade thyself in thy mind that they shall not be taken, let not thy countenance fall: I have spoken it, and none of my words shall be in vain. </div>
 <div class='p'>
 <span class="verse" id="JT6_10">10&#160;</span>Then Holofernes commanded his servants, that waited in his tent, to take Achior, and bring him to Bethulia, and deliver him into the hands of the children of Israel. </div>
 <div class='p'>
@@ -500,7 +500,7 @@
 <div class='p'>
 <span class="verse" id="JT11_9">9&#160;</span>Now as concerning the matter, which Achior did speak in thy council, we have heard his words; for the men of Bethulia saved him, and he declared unto them all that he had spoken unto thee. </div>
 <div class='p'>
-<span class="verse" id="JT11_10">10&#160;</span>Therefore, O lord and governor, respect not his word; but lay it up in thine heart, for it is true: for our nation shall not be punished, neither can sword prevail against them, except they sin against their God. </div>
+<span class="verse" id="JT11_10">10&#160;</span>Therefore, O lord and governor, reject not his word; but lay it up in thine heart, for it is true: for our nation shall not be punished, neither can sword prevail against them, except they sin against their God. </div>
 <div class='p'>
 <span class="verse" id="JT11_11">11&#160;</span>And now, that my lord be not defeated and frustrate of his purpose, even death is now fallen upon them, and their sin hath overtaken them, wherewith they will provoke their God to anger whensoever they shall do that which is not fit to be done: </div>
 <div class='p'>
@@ -572,7 +572,7 @@
 <div class='p'>
 <span class="verse" id="JT13_1">1&#160;</span>Now when the evening was come, his servants made haste to depart, and Bagoas shut his tent without, and dismissed the waiters from the presence of his lord; and they went to their beds: for they were all weary, because the feast had been long. </div>
 <div class='p'>
-<span class="verse" id="JT13_2">2&#160;</span>And Judith was left alone in the tent, and Holofernes lying along upon his bed: for he was filled with wine. </div>
+<span class="verse" id="JT13_2">2&#160;</span>And Judith was left alone in the tent, and Holofernes lying alone upon his bed: for he was filled with wine. </div>
 <div class='p'>
 <span class="verse" id="JT13_3">3&#160;</span>Now Judith had commanded her maid to stand without her bedchamber, and to wait for her. coming forth, as she did daily: for she said she would go forth to her prayers, and she spake to Bagoas according to the same purpose. </div>
 <div class='p'>
