--- a/denuded epub/OEBPS/WIS.xhtml
+++ b/denuded epub/OEBPS/WIS.xhtml
@@ -164,7 +164,7 @@
 <div class='p'>
 <span class="verse" id="WS4_3">3&#160;</span>But the multiplying brood of the ungodly shall not thrive, nor take deep rooting from bastard slips, nor lay any fast foundation. </div>
 <div class='p'>
-<span class="verse" id="WS4_4">4&#160;</span>For though they flourish in branches for a time; yet standing not last, they shall be shaken with the wind, and through the force of winds they shall be rooted out. </div>
+<span class="verse" id="WS4_4">4&#160;</span>For though they flourish in branches for a time; yet standing not fast, they shall be shaken with the wind, and through the force of winds they shall be rooted out. </div>
 <div class='p'>
 <span class="verse" id="WS4_5">5&#160;</span>The imperfect branches shall be broken off, their fruit unprofitable, not ripe to eat, yea, meet for nothing. </div>
 <div class='p'>
@@ -705,7 +705,7 @@
 <div class='p'>
 <span class="verse" id="WS15_7">7&#160;</span>For the potter, tempering soft earth, fashioneth every vessel with much labour for our service: yea, of the same clay he maketh both the vessels that serve for clean uses, and likewise also all such as serve to the contrary: but what is the use of either sort, the potter himself is the judge. </div>
 <div class='p'>
-<span class="verse" id="WS15_8">8&#160;</span>And employing his labours lewdly, he maketh a vain god of the same clay, even he which a little before was made of earth himself, and within a little while after returneth to the same, out when his life which was lent him shall be demanded. </div>
+<span class="verse" id="WS15_8">8&#160;</span>And employing his labours lewdly, he maketh a vain god of the same clay, even he which a little before was made of earth himself, and within a little while after returneth to the same, out of which he was taken, when his life which was lent him shall be demanded. </div>
 <div class='p'>
 <span class="verse" id="WS15_9">9&#160;</span>Notwithstanding his care is, not that he shall have much labour, nor that his life is short: but striveth to excel goldsmiths and silversmiths, and endeavoureth to do like the workers in brass, and counteth it his glory to make counterfeit things. </div>
 <div class='p'>
