finish wisdom discrepancies

--- a/denuded epub/OEBPS/WIS.xhtml
+++ b/denuded epub/OEBPS/WIS.xhtml
@@ -874,7 +874,7 @@
 <div class='p'>
 <span class="verse" id="WS18_21">21&#160;</span>For then the blameless man made haste, and stood forth to defend them; and bringing the shield of his proper ministry, even prayer, and the propitiation of incense, set himself against the wrath, and so brought the calamity to an end, declaring that he was thy servant. </div>
 <div class='p'>
-<span class="verse" id="WS18_22">22&#160;</span>So he overcame the destroyer, not with strength of body, nor force of arms, but with a word subdued him that punished, alleging the oaths and covenants made with the fathers. </div>
+<span class="verse" id="WS18_22">22&#160;</span>So he overcame the destroyer, not with strength of body, nor force of arms, but with a word subdued he him that punished, alleging the oaths and covenants made with the fathers. </div>
 <div class='p'>
 <span class="verse" id="WS18_23">23&#160;</span>For when the dead were now fallen down by heaps one upon another, standing between, he stayed the wrath, and parted the way to the living. </div>
 <div class='p'>
